# parm

./: .gitignore  FILE_INVENTORY.txt  README.md  SETUP.md  pyproject.toml
docs/: architecture.md  privacy-model.md
examples/: candelivers_connector.py  clueat_connector.py  full_ecosystem.py  keepclos_connector.py
tests/: test_engine.py
